--- a/hostelmess.html
+++ b/hostelmess.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width, initial-scale0.86, maximum-scale=3.0, minimum-scale=0.86">
-        <title>Exodus</title>
+        <title>Hostel and Mess</title>
         <link rel="stylesheet" href="css/style.css">
         <script rel= "stylesheet" src="js/style.js"></script>
         
